# imaginative-balaji

./: Cargo.toml  README.md
public/: tailwind.css
src/: app.rs  main.rs
src/apis/: download_item.rs  facade.rs  mod.rs  qbittorrent.rs  reqwest.rs  sabnzbd.rs
src/components/: download_item.rs  footer.rs  header.rs  mod.rs  progress.rs
