[package]
name = "imaginative_balaji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2", features = ["serde"] }
dioxus = "0.4.0"
dioxus-fullstack = { version = "0.4.1" }
dioxus-logger = "0.4.1"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "deflate", "gzip", "brotli", "cookies"] }
serde = { version = "1.0.189", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
serde_urlencoded = { version = "0.7.1"}
num-traits = "0.2.17"
gloo-timers = { version = "0.3.0", features = ["futures"] }
futures-util = "0.3.28"
wasm-bindgen-futures = { version = "0.4.37", features = [] }
smooth = "0.2.0"
bytesize = "1.3.0"
[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]
